src/algorithm/dt_old/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> result
Rule 1     result -> npwhere ( x [ idx ] comparison ( value ) , node , node )
Rule 2     node -> result
Rule 3     node -> leaf
Rule 4     leaf -> none
Rule 5     leaf -> verylow
Rule 6     leaf -> low
Rule 7     leaf -> medium
Rule 8     leaf -> high
Rule 9     digits -> digits digit
Rule 10    digits -> digit
Rule 11    digit -> NUMBER
Rule 12    comparison -> = =
Rule 13    comparison -> <
Rule 14    comparison -> >
Rule 15    comparison -> < =
Rule 16    idx -> idapplication
Rule 17    idx -> idoperator
Rule 18    idx -> idaffmanager
Rule 19    idx -> idbrowser
Rule 20    idx -> city
Rule 21    idx -> idpartner
Rule 22    idx -> idcampaign
Rule 23    idx -> idverticaltype
Rule 24    idx -> regioncontinent
Rule 25    idx -> country_name
Rule 26    idx -> accmanager
Rule 27    value -> digits . digits
Rule 28    value -> digits

Terminals, with rules where they appear

(                    : 1 1
)                    : 1 1
,                    : 1 1
.                    : 27
<                    : 13 15
=                    : 12 12 15
>                    : 14
NUMBER               : 11
[                    : 1
]                    : 1
accmanager           : 26
city                 : 20
country_name         : 25
error                : 
high                 : 8
idaffmanager         : 18
idapplication        : 16
idbrowser            : 19
idcampaign           : 22
idoperator           : 17
idpartner            : 21
idverticaltype       : 23
low                  : 6
medium               : 7
none                 : 4
npwhere              : 1
regioncontinent      : 24
verylow              : 5
x                    : 1

Nonterminals, with rules where they appear

comparison           : 1
digit                : 9 10
digits               : 9 27 27 28
idx                  : 1
leaf                 : 3
node                 : 1 1
result               : 2 0
value                : 1

Parsing method: LALR

state 0

    (0) S' -> . result
    (1) result -> . npwhere ( x [ idx ] comparison ( value ) , node , node )

    npwhere         shift and go to state 2

    result                         shift and go to state 1

state 1

    (0) S' -> result .



state 2

    (1) result -> npwhere . ( x [ idx ] comparison ( value ) , node , node )

    (               shift and go to state 3


state 3

    (1) result -> npwhere ( . x [ idx ] comparison ( value ) , node , node )

    x               shift and go to state 4


state 4

    (1) result -> npwhere ( x . [ idx ] comparison ( value ) , node , node )

    [               shift and go to state 5


state 5

    (1) result -> npwhere ( x [ . idx ] comparison ( value ) , node , node )
    (16) idx -> . idapplication
    (17) idx -> . idoperator
    (18) idx -> . idaffmanager
    (19) idx -> . idbrowser
    (20) idx -> . city
    (21) idx -> . idpartner
    (22) idx -> . idcampaign
    (23) idx -> . idverticaltype
    (24) idx -> . regioncontinent
    (25) idx -> . country_name
    (26) idx -> . accmanager

    idapplication   shift and go to state 7
    idoperator      shift and go to state 8
    idaffmanager    shift and go to state 9
    idbrowser       shift and go to state 10
    city            shift and go to state 11
    idpartner       shift and go to state 12
    idcampaign      shift and go to state 13
    idverticaltype  shift and go to state 14
    regioncontinent shift and go to state 15
    country_name    shift and go to state 16
    accmanager      shift and go to state 17

    idx                            shift and go to state 6

state 6

    (1) result -> npwhere ( x [ idx . ] comparison ( value ) , node , node )

    ]               shift and go to state 18


state 7

    (16) idx -> idapplication .

    ]               reduce using rule 16 (idx -> idapplication .)


state 8

    (17) idx -> idoperator .

    ]               reduce using rule 17 (idx -> idoperator .)


state 9

    (18) idx -> idaffmanager .

    ]               reduce using rule 18 (idx -> idaffmanager .)


state 10

    (19) idx -> idbrowser .

    ]               reduce using rule 19 (idx -> idbrowser .)


state 11

    (20) idx -> city .

    ]               reduce using rule 20 (idx -> city .)


state 12

    (21) idx -> idpartner .

    ]               reduce using rule 21 (idx -> idpartner .)


state 13

    (22) idx -> idcampaign .

    ]               reduce using rule 22 (idx -> idcampaign .)


state 14

    (23) idx -> idverticaltype .

    ]               reduce using rule 23 (idx -> idverticaltype .)


state 15

    (24) idx -> regioncontinent .

    ]               reduce using rule 24 (idx -> regioncontinent .)


state 16

    (25) idx -> country_name .

    ]               reduce using rule 25 (idx -> country_name .)


state 17

    (26) idx -> accmanager .

    ]               reduce using rule 26 (idx -> accmanager .)


state 18

    (1) result -> npwhere ( x [ idx ] . comparison ( value ) , node , node )
    (12) comparison -> . = =
    (13) comparison -> . <
    (14) comparison -> . >
    (15) comparison -> . < =

    =               shift and go to state 20
    <               shift and go to state 21
    >               shift and go to state 22

    comparison                     shift and go to state 19

state 19

    (1) result -> npwhere ( x [ idx ] comparison . ( value ) , node , node )

    (               shift and go to state 23


state 20

    (12) comparison -> = . =

    =               shift and go to state 24


state 21

    (13) comparison -> < .
    (15) comparison -> < . =

    (               reduce using rule 13 (comparison -> < .)
    =               shift and go to state 25


state 22

    (14) comparison -> > .

    (               reduce using rule 14 (comparison -> > .)


state 23

    (1) result -> npwhere ( x [ idx ] comparison ( . value ) , node , node )
    (27) value -> . digits . digits
    (28) value -> . digits
    (9) digits -> . digits digit
    (10) digits -> . digit
    (11) digit -> . NUMBER

    NUMBER          shift and go to state 29

    value                          shift and go to state 26
    digits                         shift and go to state 27
    digit                          shift and go to state 28

state 24

    (12) comparison -> = = .

    (               reduce using rule 12 (comparison -> = = .)


state 25

    (15) comparison -> < = .

    (               reduce using rule 15 (comparison -> < = .)


state 26

    (1) result -> npwhere ( x [ idx ] comparison ( value . ) , node , node )

    )               shift and go to state 30


state 27

    (27) value -> digits . . digits
    (28) value -> digits .
    (9) digits -> digits . digit
    (11) digit -> . NUMBER

    .               shift and go to state 31
    )               reduce using rule 28 (value -> digits .)
    NUMBER          shift and go to state 29

    digit                          shift and go to state 32

state 28

    (10) digits -> digit .

    .               reduce using rule 10 (digits -> digit .)
    NUMBER          reduce using rule 10 (digits -> digit .)
    )               reduce using rule 10 (digits -> digit .)


state 29

    (11) digit -> NUMBER .

    .               reduce using rule 11 (digit -> NUMBER .)
    NUMBER          reduce using rule 11 (digit -> NUMBER .)
    )               reduce using rule 11 (digit -> NUMBER .)


state 30

    (1) result -> npwhere ( x [ idx ] comparison ( value ) . , node , node )

    ,               shift and go to state 33


state 31

    (27) value -> digits . . digits
    (9) digits -> . digits digit
    (10) digits -> . digit
    (11) digit -> . NUMBER

    NUMBER          shift and go to state 29

    digits                         shift and go to state 34
    digit                          shift and go to state 28

state 32

    (9) digits -> digits digit .

    .               reduce using rule 9 (digits -> digits digit .)
    NUMBER          reduce using rule 9 (digits -> digits digit .)
    )               reduce using rule 9 (digits -> digits digit .)


state 33

    (1) result -> npwhere ( x [ idx ] comparison ( value ) , . node , node )
    (2) node -> . result
    (3) node -> . leaf
    (1) result -> . npwhere ( x [ idx ] comparison ( value ) , node , node )
    (4) leaf -> . none
    (5) leaf -> . verylow
    (6) leaf -> . low
    (7) leaf -> . medium
    (8) leaf -> . high

    npwhere         shift and go to state 2
    none            shift and go to state 38
    verylow         shift and go to state 39
    low             shift and go to state 40
    medium          shift and go to state 41
    high            shift and go to state 42

    node                           shift and go to state 35
    result                         shift and go to state 36
    leaf                           shift and go to state 37

state 34

    (27) value -> digits . digits .
    (9) digits -> digits . digit
    (11) digit -> . NUMBER

    )               reduce using rule 27 (value -> digits . digits .)
    NUMBER          shift and go to state 29

    digit                          shift and go to state 32

state 35

    (1) result -> npwhere ( x [ idx ] comparison ( value ) , node . , node )

    ,               shift and go to state 43


state 36

    (2) node -> result .

    ,               reduce using rule 2 (node -> result .)
    )               reduce using rule 2 (node -> result .)


state 37

    (3) node -> leaf .

    ,               reduce using rule 3 (node -> leaf .)
    )               reduce using rule 3 (node -> leaf .)


state 38

    (4) leaf -> none .

    ,               reduce using rule 4 (leaf -> none .)
    )               reduce using rule 4 (leaf -> none .)


state 39

    (5) leaf -> verylow .

    ,               reduce using rule 5 (leaf -> verylow .)
    )               reduce using rule 5 (leaf -> verylow .)


state 40

    (6) leaf -> low .

    ,               reduce using rule 6 (leaf -> low .)
    )               reduce using rule 6 (leaf -> low .)


state 41

    (7) leaf -> medium .

    ,               reduce using rule 7 (leaf -> medium .)
    )               reduce using rule 7 (leaf -> medium .)


state 42

    (8) leaf -> high .

    ,               reduce using rule 8 (leaf -> high .)
    )               reduce using rule 8 (leaf -> high .)


state 43

    (1) result -> npwhere ( x [ idx ] comparison ( value ) , node , . node )
    (2) node -> . result
    (3) node -> . leaf
    (1) result -> . npwhere ( x [ idx ] comparison ( value ) , node , node )
    (4) leaf -> . none
    (5) leaf -> . verylow
    (6) leaf -> . low
    (7) leaf -> . medium
    (8) leaf -> . high

    npwhere         shift and go to state 2
    none            shift and go to state 38
    verylow         shift and go to state 39
    low             shift and go to state 40
    medium          shift and go to state 41
    high            shift and go to state 42

    node                           shift and go to state 44
    result                         shift and go to state 36
    leaf                           shift and go to state 37

state 44

    (1) result -> npwhere ( x [ idx ] comparison ( value ) , node , node . )

    )               shift and go to state 45


state 45

    (1) result -> npwhere ( x [ idx ] comparison ( value ) , node , node ) .

    $end            reduce using rule 1 (result -> npwhere ( x [ idx ] comparison ( value ) , node , node ) .)
    ,               reduce using rule 1 (result -> npwhere ( x [ idx ] comparison ( value ) , node , node ) .)
    )               reduce using rule 1 (result -> npwhere ( x [ idx ] comparison ( value ) , node , node ) .)

